# search

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  app.py  benchmark.ipynb  client.py  crawl-sqlite.py  crawl.cron  crawl.py  create.sql  docker-compose.dev.yml  docker-compose.yml  ecephys.ipynb  emqx.conf  index.py  main.py  messages.py  nwb.ipynb  nwb.js  nwb.py  postgres.env  proxy.py  query.py  requirements.txt  search.env  server.py  spikes.ipynb  ui.py  walk-aws-inventory.py  walk.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
migrations/: 20230522100609_initial-schema.sql  20230522160615_add-fulltext-index.sql
src/: main.rs
static/: hdf5_util.js  index.html  worker.js
templates/: index.html
