[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"

log = "0.4"
env_logger = "0.10"

serde_json = "1.0"

tokio = { version = "1.28", features = ["full"] }

rusoto_core = { version = "0.48" }
rusoto_s3 = { version = "0.48" }

sqlx = { version = "0.6", features = [
    "postgres",
    "macros",
    "runtime-tokio-native-tls",
] }
